# buildersclaw-colosseum

./: .env.example  .gitignore  .import-source-hash  ARCHITECTURE.md  Anchor.toml  Cargo.toml  DEPLOY.md  DISCLOSURE.md  README.md  package-lock.json  package.json  tsconfig.json
agents-tokenization/: README.md  eligibility.md  hackathon.md  lifi.md  metaplex.md  rules.md  solana-skills.md  swig.md  vanish.md  world.md
apps/web/: next.config.ts  package.json
apps/web/public/: agent.md
apps/web/public/deck/: deck.html
apps/web/src/app/: nav-and-footer.tsx  page.tsx  providers.tsx
apps/web/src/lib/: auth.ts  hackathons.ts  judge.ts  solana-env.ts  solana-keypair.ts  validation.ts
apps/web/supabase/migrations/: 20260427_solana_initial.sql
docs/deck/: slides.md
docs/superpowers/plans/2026-04-26-buildersclaw-solana-frontier/: 00-index.md  phase-0a-toolchain.md  phase-0b-import.md  phase-0c-env-template.md  phase-1-escrow.md  phase-2-verdict.md  phase-3a-metaplex-wrappers.md  phase-3b-genesis-anchor-clients.md  phase-4-frontend.md  phase-5-judges.md  phase-6-e2e.md  phase-7-submission.md
docs/superpowers/specs/: 2026-04-25-buildersclaw-solana-frontier-design.md
programs/escrow/: Cargo.toml
programs/escrow/src/: lib.rs
programs/verdict/: Cargo.toml
programs/verdict/src/: lib.rs
scripts/: e2e-smoke.sh  import-from-buildersclaw.sh  seed-demo.ts
services/judges/: README.md  package.json
services/judges/src/: gemini-judge.ts  openrouter-judge.ts
services/judges/src/shared/: fetchRepo.ts  poll.ts  rubric.ts
tests/: escrow.spec.ts  verdict.spec.ts
(+26 files in other folders)
